--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,7 @@
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
         }
+
         body {
             background: #fafafa;
             color: #333;
@@ -64,20 +65,23 @@
             text-align: center;
             margin: 0;
         }
+
         .container {
             width: 100%;
             max-width: 1200px; /* Prevents content from stretching too much */
             padding: 40px;
             box-sizing: border-box;
         }
-        .navigation {
+
+        nav ul {
             display: flex;
-            justify-content: center;
-            gap: 30px;
+            list-style: none;
+            gap: 20px;
             margin-bottom: 20px;
+            justify-content: center;
         }
 
-        .navigation a {
+        nav ul li a {
             text-decoration: none;
             color: #333;
             font-weight: 500;
@@ -85,15 +89,17 @@
             transition: color 0.3s ease;
         }
 
-        .navigation a:hover {
+        nav ul li a:hover {
             color: #75975e;
         }
+
         .portfolio-title {
             font-size: 3rem;
             font-family: 'Pacifico', cursive;
             color: #75975e;
             margin-bottom: 20px;
         }
+
         .portfolio-text {
             font-size: 1.2rem;
             margin-bottom: 20px;
@@ -103,6 +109,7 @@
             margin-left: auto;
             margin-right: auto;
         }
+
         .projects-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -110,6 +117,7 @@
             margin-top: 40px;
             width: 100%;
         }
+
         .project-card {
             background: white;
             padding: 30px; /* Increased padding for more spacing */
@@ -118,22 +126,27 @@
             transition: transform 0.3s ease;
             text-align: left; /* Align text properly inside the card */
         }
+
         .project-card:hover {
             transform: translateY(-5px);
         }
+
         .project-card img {
             width: 100%;
             border-radius: 10px;
             margin-bottom: 15px;
         }
+
         .project-card h3 {
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
+
         .project-card p {
             word-wrap: break-word;
             overflow-wrap: break-word;
         }
+
         .btn {
             text-decoration: none;
             background: #75975e;
@@ -145,14 +158,17 @@
             display: inline-block;
             margin-top: 10px;
         }
+
         .btn:hover {
             background: #c7DDB5;
         }
+
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
             animation: fadeIn 1s forwards ease-in-out;
         }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -163,9 +179,21 @@
                 transform: translateY(0);
             }
         }
+
+        /* Mobile responsiveness */
         @media (max-width: 768px) {
             .projects-grid {
                 grid-template-columns: 1fr; /* Ensures a single column layout on smaller screens */
+            }
+
+            .portfolio-title {
+                font-size: 2rem; /* Adjusting font size for smaller screens */
+            }
+
+            .portfolio-text {
+                font-size: 1rem; /* Adjusting font size for readability */
+                padding-left: 20px;
+                padding-right: 20px;
             }
         }
     </style>
