--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <!-- Simple text links as navigation -->
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
 
         <section class="portfolio fade-in">
             <h1 class="portfolio-title">My Work</h1>
@@ -58,30 +55,23 @@
         body {
             background: #fafafa;
             color: #333;
-            display: flex;
-            justify-content: center; /* Horizontally centers the content */
-            align-items: center; /* Vertically centers the content */
-            height: 100vh;
-            text-align: center;
-            margin: 0;
+            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
+            overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
-        .container {
-            width: 100%;
-            max-width: 1200px; /* Prevents content from stretching too much */
-            padding: 40px;
-            box-sizing: border-box;
-        }
-
-        nav ul {
+        .navigation {
             display: flex;
-            list-style: none;
-            gap: 20px;
-            margin-bottom: 20px;
             justify-content: center;
+            gap: 30px;
+            top: 0;
+            left: 0;
+            right: 0;
+            background-color: white;
+            padding: 20px;
+            z-index: 1000; /* Keeps the navbar on top */
         }
 
-        nav ul li a {
+        .navigation a {
             text-decoration: none;
             color: #333;
             font-weight: 500;
@@ -89,8 +79,18 @@
             transition: color 0.3s ease;
         }
 
-        nav ul li a:hover {
+        .navigation a:hover {
             color: #75975e;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh; /* Ensures the content fills at least the height of the viewport */
+            justify-content: flex-start;
+            text-align: center;
+            padding: 40px;
         }
 
         .portfolio-title {
@@ -180,7 +180,6 @@
             }
         }
 
-        /* Mobile responsiveness */
         @media (max-width: 768px) {
             .projects-grid {
                 grid-template-columns: 1fr; /* Ensures a single column layout on smaller screens */
@@ -196,6 +195,17 @@
                 padding-right: 20px;
             }
         }
+
+        /* Invisible scrollbar styling */
+        ::-webkit-scrollbar {
+            width: 0px;
+            background: transparent;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: transparent;
+        }
     </style>
 </body>
 </html>
+
